<resources>
    <string name="app_name">NKU无线神器</string>
    <string name="username">学号 : </string>
    <string name="password">密码 : </string>
    <string name="button_login">一键登录</string>
    <string name="button_login1">余额信息</string>
    <string name="button_login2">注销登陆</string>
    <string name="rmb">记住密码(自动登录请务必勾选)</string>
    <string name="versionname">当前版本 V1.8.8.8</string>
    <string name="abooout">特别感谢：" 吃掉南开 "插画设计者(App图标)和NKMSC各位大神的部分源码、图片和灵感\nhttps://github.com/NKMSC\n\n登录NKU_WLAN是一个重复性高但令人烦躁的事——去食堂、图书馆、回宿舍,每次都要重新登录!!而且!学校网关页面对部分手机支持不太好(比如本人)。本神器由此而生,但无奈代码水平低,神器可能会有一些Bug,欢迎各种反馈!\n\n使用方法:\n1、输入你的学号和密码,勾选"记住密码"\n2、点击一键登录\n3、把这个应用放入后台(按Home键),别杀掉它哦!它会在你每次连接 NKU_WLAN 时自动用你保存的用户密码登录!\n\n注意:连接NKU_WLAN可能会自动弹出一个登陆窗口,只要见到"自动登陆成功"提示即可直接无视该弹出,Enjoy Internet!</string>
    <string name="author">By Steven.\nHereSteven@126.com\n\n 2016.9.17</string>
</resources>
